buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
        maven { url = 'https://maven.parchmentmc.org' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: "${forgegradle_version}", changing: true
        classpath "org.parchmentmc:librarian:${librarian_version}"
        classpath "org.spongepowered:mixingradle:${mixingradle_version}"
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

version = mod_version
group = 'plus.dragons.createcentralkitchen'
archivesBaseName = "create_central_kitchen-${artifact_minecraft_version}-for-create-${create_version}"

jarJar.enable()
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: 'parchment', version: "${parchment_version}-${minecraft_version}"

    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.

    runs {
        client {
            workingDirectory project.file('run')

            arg '-mixin.config=create_central_kitchen.mixins.json'

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            property 'forge.enabledGameTestNamespaces', 'create_central_kitchen'

            mods {
                create_central_kitchen {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            arg '-mixin.config=create_central_kitchen.mixins.json'

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            property 'forge.enabledGameTestNamespaces', 'create_central_kitchen'

            mods {
                create_central_kitchen {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            args '--mod', 'create_central_kitchen',
                 '--all', '--output', file('src/generated/resources/'),
                 '--existing', file('src/main/resources/'),
                 '--existing-mod', 'create',
                 '--existing-mod', 'farmersdelight'

            mods {
                create_central_kitchen {
                    source sourceSets.main
                }
            }
        }
    }
}


repositories {
    maven {
        name "Tterrag maven"
        url "https://maven.tterrag.com/"
    }
    maven {
        name 'Progwml6 maven'
        url 'https://dvs1.progwml6.com/files/maven'
    }
    maven {
        name "Blamejared Maven"
        url "https://maven.blamejared.com"
    }
    maven {
        name "Theillusivec4 Maven"
        url "https://maven.theillusivec4.top/"
    }
    maven {
        name "Abnormals Maven"
        url  "https://maven.jaackson.me"
    }
    maven {
        name "Apple Skin"
        url "https://maven.ryanliptak.com/"
    }
    maven {
        name "JitPack"
        url 'https://jitpack.io'
    }
    maven {
        name "Curse Maven"
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    //embedded dependencies
    jarJar(group: 'com.github.LlamaLad7', name: "MixinExtras", version: "[${mixin_extras_version},)") {
        transitive = false
        jarJar.pin(it, project.mixin_extras_version)
    }
    minecraftLibrary "com.github.LlamaLad7:MixinExtras:${mixin_extras_version}"
    annotationProcessor "com.github.LlamaLad7:MixinExtras:${mixin_extras_version}"
    //mandatory dependencies
    implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}-${create_version_build}:slim")
    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
    implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
    //integration dependencies
    //farmers delight series
    implementation fg.deobf("curse.maven:farmers-delight-398521:${farmers_delight_file}")
    implementation fg.deobf("curse.maven:farmers-respite-551453:${farmers_respite_file}")
    implementation fg.deobf("curse.maven:miners-delight-plus-689630:${miners_delight_file}")
    implementation fg.deobf("curse.maven:brewin-and-chewin-637808:${brewin_and_chewin_file}")
    //abnormals series
    implementation fg.deobf("com.teamabnormals:blueprint:${blueprint_version}")
    implementation fg.deobf("curse.maven:abnormals-delight-442719:${abnormals_delight_file}")
    implementation fg.deobf("curse.maven:atmospheric-362393:${atmospheric_file}")
    implementation fg.deobf("curse.maven:autumnity-365045:${autumnity_file}")
    implementation fg.deobf("curse.maven:environmental-388992:${environmental_file}")
    implementation fg.deobf("curse.maven:neapolitan-382016:${neapolitan_file}")
    implementation fg.deobf("curse.maven:upgrade-aquatic-326895:${upgrade_aquatic_file}")
    implementation fg.deobf("curse.maven:peculiars-418551:${peculiars_file}")
    implementation fg.deobf("curse.maven:seasonals-416471:${seasonals_file}")
    implementation fg.deobf("curse.maven:differentiate-450748:${differentiate_file}")
    implementation fg.deobf("curse.maven:cookielicious-409577:${cookielicious_file}")
    //utility dependencies
    compileOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}:api")
    runtimeOnly fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_minecraft_version}-${curios_version}:api")
    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${curios_minecraft_version}-${curios_version}")
    compileOnly fg.deobf("squeek.appleskin:appleskin-forge:mc${appleskin_minecraft_version}-${appleskin_version}:api")
    runtimeOnly fg.deobf("squeek.appleskin:appleskin-forge:mc${appleskin_minecraft_version}-${appleskin_version}")

    annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

mixin {
    add sourceSets.main, 'create_central_kitchen.refmap.json'
    config 'create_central_kitchen.mixins.json'

    debug.verbose = true
    debug.export = true
}

jar {
    classifier 'slim'
    from "LICENSE"
    manifest {
        attributes([
            "Specification-Title"     : "create_central_kitchen",
            "Specification-Vendor"    : "dragonsplus",
            "Specification-Version"   : "1", // We are version 1 of ourselves
            "Implementation-Title"    : project.name,
            "Implementation-Version"  : project.jar.archiveVersion,
            "Implementation-Vendor"   : "dragonsplus",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            'MixinConfigs': 'create_central_kitchen.mixins.json'
        ])
    }
}

tasks.jarJar {
    classifier ""
    from "LICENSE"
}

jar.finalizedBy('reobfJar')
tasks.jarJar.finalizedBy(reobf.maybeCreate('jarJar'))

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
